name:                certbot-loop
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/certbot-loop#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable certbot-loop
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , typed-process
                     , optparse-applicative
                     , optparse-simple
  default-language:    Haskell2010
